--- a/MvcWork/MvcWork/Views/User/Index.cshtml
+++ b/MvcWork/MvcWork/Views/User/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Kullanıcı Menüsü</h1>
     <div>
         <a asp-action="NoteAdd" asp-controller="Note" asp-route-userId="@userId">Not Ekle</a> |
-        <a asp-action="NoteList" asp-controller="Note">Notları Listele</a> |
-        <a asp-action="UserEdit" asp-controller="User">Kullanıcıyı Düzenle</a>
+        <a asp-action="NoteList" asp-controller="Note" asp-route-userId="@userId">Notları Listele</a> |
+        <a asp-action="UserEdit" asp-controller="User" asp-route-userId="@userId">Kullanıcıyı Düzenle</a>
     </div>
 </div>
