--- a/MvcWork/MvcWork/Views/Note/NoteEdit.cshtml
+++ b/MvcWork/MvcWork/Views/Note/NoteEdit.cshtml
@@ -12,6 +12,7 @@
 <h1>Note Edit sayfası</h1>
 
 <form asp-controller="Note" asp-action="NoteEdit" method="post">
+    <input type="hidden" name="UserId" value="@Model.UserId" />
     <input type="hidden" name="NoteId" value="@Model.NoteId" />
     <label>Note Description:</label>
     <input type="text" name="NoteDescription" value="@Model.NoteDescription" />
